package jp.kuwako.masaki.rssandroid.activty;

import android.os.Bundle;
import android.support.v7.app.AppCompatActivity;

/**
 * Created by m_kuwako on 2016/10/11.
 */

public class BaseActivity extends AppCompatActivity {
    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
    }
}
