package jp.kuwako.masaki.rssandroid.setting;

/**
 * Created by m_kuwako on 2016/10/11.
 * 定数クラス
 */

public final class Constants {
    private Constants() {}

    public static int MAX_TITLE_LENGTH = 10;
    public static int MAX_DISCRIPTION_LENGTH = 30;
}
