package jp.kuwako.masaki.rssandroid.setting;

/**
 * Created by m_kuwako on 2016/10/13.
 */

public class Url {
}
